# qc-rule-paradox-scanner

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
data/: hospital_rules_sample.txt  insurance_rules_sample.txt  invalid_format.xyz  no_conflict_sample.txt  single_rule_sample.txt  standards_sample.txt
src/qc_rule_paradox_scanner/: __init__.py  cli.py  config.py  conflict_detector.py  document_reader.py  html_reporter.py  output_schema.py  priority_resolver.py  text_preprocessor.py  triple_extractor.py
tests/: test_edge_cases.py
